comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolor laudantium rerum excepturi autem explicabo perspiciatis illum nobis omnis quia corrupti sequi aliquam fugiat ducimus pariatur aliquid, vitae quisquam culpa!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quibusdam, quo ducimus aspernatur rerum corporis nesciunt eius itaque a totam. Quae sit accusantium harum commodi illum beatae minima fugit magni!</p>
         </article>
     </main>
 </body>
