--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Site CursoeVideo</title>
 </head>
 
 <body>
@@ -15,11 +15,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolor laudantium rerum excepturi autem explicabo perspiciatis illum nobis omnis quia corrupti sequi aliquam fugiat ducimus pariatur aliquid, vitae quisquam culpa!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolor laudantium rerum excepturi autem
+                explicabo perspiciatis illum nobis omnis quia corrupti sequi aliquam fugiat ducimus pariatur aliquid,
+                vitae quisquam culpa!</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quibusdam, quo ducimus aspernatur rerum corporis nesciunt eius itaque a totam. Quae sit accusantium harum commodi illum beatae minima fugit magni!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quibusdam, quo ducimus aspernatur
+                rerum corporis nesciunt eius itaque a totam. Quae sit accusantium harum commodi illum beatae minima
+                fugit magni!</p>
         </article>
     </main>
 </body>
