--- a/index.html
+++ b/index.html
@@ -13,18 +13,23 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus dolor laudantium rerum excepturi autem
-                explicabo perspiciatis illum nobis omnis quia corrupti sequi aliquam fugiat ducimus pariatur aliquid,
-                vitae quisquam culpa!</p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semnântica
+                dos elementos para criar o conteúdo de uma página Web. Com a CSS, criamos as configurações visuais que
+                um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident quibusdam, quo ducimus aspernatur
-                rerum corporis nesciunt eius itaque a totam. Quae sit accusantium harum commodi illum beatae minima
-                fugit magni!</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
+            <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus
+                visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio
+                do DOM.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
